--- a/Our Coffees.html
+++ b/Our Coffees.html
@@ -14,9 +14,9 @@
         <div id="mobileNavigation">            
             <nav>
                 <ul>
-                <li><a href="/index.html"><h2>Lynx Cafe</h2></a></li>
-                <li><a href="/Our Coffees.html"><h2>Our Coffees</h2></a></li>
-                <li><a href="/Our Menus.html"><h2>Our Menu</h2></a></li>
+                    <li><a href="/index.html"><h2>Coffee Lab</h2></a></li>
+                    <li><a href="/Our Coffees.html"><h2>Nossos Cafés</h2></a></li>
+                    <li><a href="/Our Menus.html"><h2>Nosso Menu</h2></a></li>
                 </ul>
             </nav> 
         </div>
@@ -28,17 +28,17 @@
     
      
     <div class="headerText">
-    <h1>Our coffees</h1>
-    <h2>Six signature coffees that we know you'll love.</h2>
+    <h1>Nossos Cafés</h1>
+    <h2>Seis cafés especiais que você vai amar.</h2>
     </div>
     </div>
 
     <div class="firstNavigation">
         <nav>
             <ul>
-            <li><a href="/index.html"><h1>LYNX</br></h1><h2>CAFE</h2></a></li>
-            <li><a href="/Our Coffees.html"><h3>Our Coffees</h3></a></li>
-            <li><a href="/Our Menus.html"><h3>Our Menu</h3></a></li>
+                <li><a href="/index.html"><h1>COFFEE</br></h1><h2>Lab</h2></a></li>
+                <li><a href="/Our Coffees.html"><h3>Nossos Cafés</h3></a></li>
+                <li><a href="/Our Menus.html"><h3>Nossos Menus</h3></a></li>
             </ul>
             </nav>
         </div>
@@ -48,10 +48,10 @@
         <div class="secondNavigation">
         <nav>
             <ul>
-            <li><a href="./Our Coffees.html"><h3>Our coffees</h3></a></li>
-            <li><a href="./Our Coffees/Lynx Express.html"><h3>Lynx Express</h3></a></li>
-        <li><a href="./Our Coffees/Coffee in a can.html"><h3>Coffee in a can</h3></a></li>
-            <li><a href="./Our Coffees/Lynx at home.html"><h3>Lynx at home</h3></a></li>
+                <li><a href="/Our Coffees.html"><h3>Nossos Cafés</h3></a></li>
+                <li><a href="/Our Coffees/Lynx Express.html"><h3>Lab Express</h3></a></li>
+                <li><a href="/Our Coffees/Coffee in a can.html"><h3>Café na lata</h3></a></li>
+                <li><a href="/Our Coffees/Lynx at home.html"><h3>Café em casa</h3></a></li>
         </ul>
         </nav>
         </div>
@@ -62,9 +62,9 @@
                <video src="Videos/Our-coffee.mp4" width="100%" autoplay loop></video>
                 </div>
                 <div class="secondRow">
-               <h2>It's free to go dairy-free</h2>
+               <h2>Livre de lacticíneos</h2>
                <p>
-                Our tasty new plant-based alternatives - Soya, Almond, Coconut and Oat - are no extra cost when you scan the Costa app in store until 3rd March 2022!* Don't have the app yet?
+                Nossos deliciosos produtos à base de planta - Soja, Amêndoa, Côco e Aveia - virão sem custos extras quando você apresenta nosso cartão Lab. 
                </p>
                 </div>
            </div>
