--- a/Our Coffees/Coffee in a can.html
+++ b/Our Coffees/Coffee in a can.html
@@ -15,9 +15,9 @@
             <div id="mobileNavigation">            
                 <nav>
                     <ul>
-                    <li><a href="/index.html"><h2>Lynx Cafe</h2></a></li>
-                    <li><a href="/Our Coffees.html"><h2>Our Coffees</h2></a></li>
-                    <li><a href="/Our Menus.html"><h2>Our Menu</h2></a></li>
+                    <li><a href="/index.html"><h2>Coffee Lab</h2></a></li>
+                    <li><a href="/Our Coffees.html"><h2>Nossos Cafés</h2></a></li>
+                    <li><a href="/Our Menus.html"><h2>Nosso Menu</h2></a></li>
                     </ul>
                 </nav> 
             </div>
@@ -37,9 +37,9 @@
             <div class="firstNavigation">
             <nav>
                 <ul>
-                <li><a href="/index.html"><h1>LYNX</br></h1><h2>CAFE</h2></a></li>
-                <li><a href="/Our Coffees.html"><h3>Our Coffees</h3></a></li>
-                <li><a href="/Our Menus.html"><h3>Our Menu</h3></a></li>
+                <li><a href="/index.html"><h1>COFFEE</br></h1><h2>Lab</h2></a></li>
+                <li><a href="/Our Coffees.html"><h3>Nossos Cafés</h3></a></li>
+                <li><a href="/Our Menus.html"><h3>Nossos Menus</h3></a></li>
                 </ul>
             </nav>
         </div>
@@ -49,10 +49,10 @@
     <div class="secondNavigation">
         <nav>
             <ul>
-            <li><a href="/Our Coffees.html"><h3>Our coffees</h3></a></li>
-            <li><a href="/Our Coffees/Lynx Express.html"><h3>Lynx Express</h3></a></li>
-            <li><a href="/Our Coffees/Coffee in a can.html"><h3>Coffee in a can</h3></a></li>"
-            <li><a href="/Our Coffees/Lynx at home.html"><h3>Lynx at home</h3></a></li>
+                <li><a href="/Our Coffees.html"><h3>Nossos Cafés</h3></a></li>
+                <li><a href="/Our Coffees/Lynx Express.html"><h3>Lab Express</h3></a></li>
+                <li><a href="/Our Coffees/Coffee in a can.html"><h3>Café na lata</h3></a></li>
+                <li><a href="/Our Coffees/Lynx at home.html"><h3>Café em casa</h3></a></li>
             </ul>
         </nav>
     </div>
@@ -60,11 +60,11 @@
     <div class="backgroundBody">
         <section>
             <div class="oneRow">
-           <h2>Coffee the Lynx way</h2>
+           <h2>Café de verdade. Na lata.</h2>
            <img class="imgText" src="/Images/coffee-can.jpg"/>
-           <p>Looking for a little mid-afternoon pick-me-up? Try our Costa Coffee in a can. Enjoy straight from the fridge when you’re looking for that real coffee kick.</p>
+           <p>Procurando por um pouco de energia durante a tarde? Teste nossos cafés na lata. Vá direto na geladeira quando estiver procurando por uma verdadeira explosão de energia!</p>
             <br/><br/>
-            <p>And even better, they’re made with 30% less sugar than most ready-to-drink coffees* to release the full flavour of our Signature Mocha Italia blend. No faffing, just proper coffee in a can - all you have to do is chill, crack open and enjoy.</p>                 
+            <p>Ainda melhor, eles são feitos com 30% menos açucar do que a maioria dos cafés em lata* isso para que você sinta o inteiro sabor de nosso café. Sem frescura, café de verdade na late - tudo que você tem que fazer é relaxar, abrir e aproveitar.</p>                 
        </section>
    </div>
    <script src="/myApp.js"></script>
