--- a/Our Coffees/Lynx Express.html
+++ b/Our Coffees/Lynx Express.html
@@ -15,9 +15,9 @@
             <div id="mobileNavigation">            
                 <nav>
                     <ul>
-                    <li><a href="/index.html"><h2>Lynx Cafe</h2></a></li>
-                    <li><a href="/Our Coffees.html"><h2>Our Coffees</h2></a></li>
-                    <li><a href="/Our Menus.html"><h2>Our Menu</h2></a></li>
+                        <li><a href="/index.html"><h2>Coffee Lab</h2></a></li>
+                        <li><a href="/Our Coffees.html"><h2>Nossos Cafés</h2></a></li>
+                        <li><a href="/Our Menus.html"><h2>Nosso Menu</h2></a></li>
                     </ul>
                 </nav> 
             </div>
@@ -27,8 +27,8 @@
 
         <img class="headerImage" src="/Images/flatwhite3.png" />
         <div class="headerText">
-        <h1>Lynx Express
-        <h2>Costa Express is the quickest and easiest way to enjoy a delicious, quality cup of Costa Coffee on the go.</h1>
+        <h1>Lab Express
+        <h2>Lab Express é a maneira mais rapida e fácil de degustar um delicioso café!</h1>
         </h2>
         </div>
         </div>
@@ -36,9 +36,9 @@
             <div class="firstNavigation">
             <nav>
                 <ul>
-                <li><a href="/index.html"><h1>LYNX</br></h1><h2>CAFE</h2></a></li>
-                <li><a href="/Our Coffees.html"><h3>Our Coffees</h3></a></li>
-                <li><a href="/Our Menus.html"><h3>Our Menu</h3></a></li>
+                    <li><a href="/index.html"><h1>COFFEE</br></h1><h2>Lab</h2></a></li>
+                    <li><a href="/Our Coffees.html"><h3>Nossos Cafés</h3></a></li>
+                    <li><a href="/Our Menus.html"><h3>Nossos Menus</h3></a></li>
                 </ul>
                 </nav>
             </div>
@@ -49,10 +49,10 @@
         <div class="secondNavigation">
             <nav>
                 <ul>
-                <li><a href="/Our Coffees.html"><h3>Our coffees</h3></a></li>
-                <li><a href="/Our Coffees/Lynx Express.html"><h3>Lynx Express</h3></a></li>
-                <li><a href="/Our Coffees/Coffee in a can.html"><h3>Coffee in a can</h3></a></li>"
-                <li><a href="/Our Coffees/Lynx at home.html"><h3>Lynx at home</h3></a></li>
+                <li><a href="/Our Coffees.html"><h3>Nossos Cafés</h3></a></li>
+                <li><a href="/Our Coffees/Lynx Express.html"><h3>Lab Express</h3></a></li>
+                <li><a href="/Our Coffees/Coffee in a can.html"><h3>Café na lata</h3></a></li>
+                <li><a href="/Our Coffees/Lynx at home.html"><h3>Café em casa</h3></a></li>
                 </ul>
             </nav>
         </div>
@@ -61,13 +61,13 @@
         <div class="backgroundBody">
              <section>
                  <div class="oneRow">
-                <h2>Irresistible coffee on the go</h2>
+                <h2>Nosso café irresistível em qualquer lugar</h2>
                 <img class="imgText" src="/Images/man-coffee.jpg"/>
-                <p>We've worked hard to make sure that our Express machines serve the same barista-style coffee you'd expect to find in one of our stores, delivering an authentic coffee shop experience wherever you happen to be.</p>
+                <p>Nós trabalhamos duro para fazer nossas máquinas de café servir com a mesma qualidade que você espera de nossos baristas, entregando um café autêntico onde quer que você esteja.</p>
                 </br></br>                    
-                <p>Our state-of-the-art self-serve coffee bars combine our freshly ground Signature Blend beans, real milk and cutting-edge technology to deliver you a delicious drink on-the-go.</p>
+                <p>Nosso auto-serviço contém os grãos especiis do nosso café, leite de verdade, e a melhor tecnologia para servi-lo com um café delicioso!</p>
                 </br></br>
-                <p>So, if you fancy a latte, cappuccino or hot chocolate you can be guaranteed the freshest taste and finest ingredients, just the way it should be.</p>
+                <p>Então se você gosta de um latte, cappuccino ou chocolate quente, você será garantido de ter o sabor mais fresco e os melhores ingrediente, exatamente da forma que tem de ser.</p>
                 </div> 
             </section>
         </div>
