--- a/Our Coffees/Lynx at home.html
+++ b/Our Coffees/Lynx at home.html
@@ -15,9 +15,9 @@
             <div id="mobileNavigation">            
                 <nav>
                     <ul>
-                    <li><a href="/index.html"><h2>Lynx Cafe</h2></a></li>
-                    <li><a href="/Our Coffees.html"><h2>Our Coffees</h2></a></li>
-                    <li><a href="/Our Menus.html"><h2>Our Menu</h2></a></li>
+                        <li><a href="/index.html"><h2>Coffee Lab</h2></a></li>
+                        <li><a href="/Our Coffees.html"><h2>Nossos Cafés</h2></a></li>
+                        <li><a href="/Our Menus.html"><h2>Nosso Menu</h2></a></li>
                     </ul>
                 </nav> 
             </div>
@@ -35,9 +35,9 @@
          <div class="firstNavigation">
             <nav>
                 <ul>
-                <li><a href="/index.html"><h1>LYNX</br></h1><h2>CAFE</h2></a></li>
-                <li><a href="/Our Coffees.html"><h3>Our Coffees</h3></a></li>
-                <li><a href="/Our Menus.html"><h3>Our Menu</h3></a></li>
+                    <li><a href="/index.html"><h1>COFFEE</br></h1><h2>Lab</h2></a></li>
+                    <li><a href="/Our Coffees.html"><h3>Nossos Cafés</h3></a></li>
+                    <li><a href="/Our Menus.html"><h3>Nossos Menus</h3></a></li>
                 </ul>
             </nav>
         </div>
@@ -47,10 +47,10 @@
     <div class="secondNavigation">
         <nav>
             <ul>
-            <li><a href="/Our Coffees.html"><h3>Our coffees</h3></a></li>
-            <li><a href="/Our Coffees/Lynx Express.html"><h3>Lynx Express</h3></a></li>
-            <li><a href="/Our Coffees/Coffee in a can.html"><h3>Coffee in a can</h3></a></li>"
-            <li><a href="/Our Coffees/Lynx at home.html"><h3>Lynx at home</h3></a></li>
+                <li><a href="/Our Coffees.html"><h3>Nossos Cafés</h3></a></li>
+                <li><a href="/Our Coffees/Lynx Express.html"><h3>Lab Express</h3></a></li>
+                <li><a href="/Our Coffees/Coffee in a can.html"><h3>Café na lata</h3></a></li>
+                <li><a href="/Our Coffees/Lynx at home.html"><h3>Café em casa</h3></a></li>
             </ul>
         </nav>
     </div>
@@ -59,13 +59,13 @@
     <div class="backgroundBody">
         <section>
             <div class="oneRow">
-           <h2>Coffee the Lynx way</h2>
+           <h2>Café no estilo Lab</h2>
            <img class="imgText" src="/Images/latte-glass.jpg"/>
-           <p>It’s never been easier to channel your inner barista and enjoy proper Costa Coffee at home.
+           <p>Nunca foi tão fácil de canalizar o seu barista interior e degustar um verdadeiro café no conforto da sua casa.
             <br/><br/>
-            <p>We have a wide range of delicious blends in a variety of brewing methods for you to prepare your coffee just how you like to enjoy it at home.</p>
+            <p>Nós temos uma enorme variedade de cafés delicioso e métodos de preparação para que você aproveite nosso café na sua casa.</p>
             <br/><br/>
-            <p>Our At Home range offers the same iconic Signature Blend taste you'd expect to find in our stores but enjoyed at home... and in your favourite mug.</p>
+            <p>Oferecemos nosso café icônico, da mesma forma que você esperaria estando em uma de nossas lojas... usando a sua caneca favorita.</p>
            </br></br>                    
        </section>
    </div>
