--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                 <div id="mobileNavigation">            
                     <nav>
                         <ul>
-                        <li><a href="/index.html"><h2>Lynx Cafe</h2></a></li>
-                        <li><a href="/Our Coffees.html"><h2>Our Coffees</h2></a></li>
-                        <li><a href="/Our Menus.html"><h2>Our Menu</h2></a></li>
+                            <li><a href="/index.html"><h2>Coffee Lab</h2></a></li>
+                            <li><a href="/Our Coffees.html"><h2>Nossos Cafés</h2></a></li>
+                            <li><a href="/Our Menus.html"><h2>Nosso Menu</h2></a></li>
                         </ul>
                     </nav> 
                 </div>
@@ -29,17 +29,17 @@
         <img class="headerImage" src="/Images/flatwhite3.png"/>
     
         <div class="headerText">
-        <h1>World off, coffee on</h1>
-        <h2>Recharge with our great coffee,<br/>
-            wherever, whenever</h2>
+        <h1>O mundo pode parar, <br/>nós continuamos!</h1>
+        <h2><br/>Recalibre-se com nosso incrível café,<br/>
+            onde quer que esteja</h2>
         </div>
         </div>
             <div class="firstNavigation">
             <nav>
                 <ul>
-                <li><a href="/index.html"><h1>LYNX</br></h1><h2>CAFE</h2></a></li>
-                <li><a href="/Our Coffees.html"><h3>Our Coffees</h3></a></li>
-                <li><a href="/Our Menus.html"><h3>Our Menu</h3></a></li>
+                    <li><a href="/index.html"><h1>COFFEE</br></h1><h2>Lab</h2></a></li>
+                    <li><a href="/Our Coffees.html"><h3>Nossos Cafés</h3></a></li>
+                    <li><a href="/Our Menus.html"><h3>Nossos Menus</h3></a></li>
                 </ul>
             </nav>
             </div>
@@ -51,8 +51,8 @@
         <section>
             <div class="twoRows">
                 <div class="firstRow">
-                <h2>Buy 4 drinks to get 1 free</h2>
-                <p>As a member of our Costa Club, when you bring a reusable cup to use, you'll get an extra bean. It's buy 4 to get 1 free** so you'll get to your free drink faster! That's good for your pocket, and the planet. Not a member yet? Download the app here.
+                <h2>Compre 4, e 1 de graça!</h2>
+                <p>Se você possui nosso cartão, quando você trás um copo reutilizável, você ganha um ponto extra. Compre 4, e ganhe 1 de graça** assim você chega a sua bebida grátis mais depressa! É bom para o seu bolso, e para o planeta.
                 </p>
                 </div>   
                 <div class="secondRow">
@@ -63,8 +63,8 @@
 
          <section>
              <div class="oneRow">
-            <h2>Linx Coffee is With You</h2>
-            <p>As the Nation's Favourite Coffee Shop, we are committed to supporting our customers, communities and people. Following the latest Government guidance, we’ve made changes to how we serve our coffee, introducing social distancing and enhancing our hygiene procedures to keep our store teams and customers safe.</p>
+            <h2>Coffee Lab está com você</h2>
+            <p>Para os amantes do café, nós estamos comprometidos a ajudar nossos clientes, comunidades e pessoas. Seguindo as medidas do governo, nós fizemos mudanças em como servimos nosso café, introduzindo distanciamento social e aprimorando a higiene de nossos procedimentos para manter nosso time e consumidores seguros.</p>
             </div> 
         </section>
     </div>
