--- a/Our Menus.html
+++ b/Our Menus.html
@@ -14,9 +14,9 @@
             <div id="mobileNavigation">            
                 <nav>
                     <ul>
-                    <li><a href="/index.html"><h2>Lynx Cafe</h2></a></li>
-                    <li><a href="/Our Coffees.html"><h2>Our Coffees</h2></a></li>
-                    <li><a href="/Our Menus.html"><h2>Our Menu</h2></a></li>
+                        <li><a href="/index.html"><h2>Coffee Lab</h2></a></li>
+                        <li><a href="/Our Coffees.html"><h2>Nossos Cafés</h2></a></li>
+                        <li><a href="/Our Menus.html"><h2>Nosso Menu</h2></a></li>
                     </ul>
                 </nav> 
             </div>
@@ -28,18 +28,18 @@
 
         <div class="headerText">
         <h1>Menu</h1>
-        <h2>Our menu’s full of the good stuff.<br/>
-        Whatever your diet or preferences,<br/>
-        there’s enough choice for everyone.</h2>
+        <h2>Nosso menu é cheio de coisas incríveis.<br/>
+        Qualquer dieta ou preferência<br/>
+        há uma varieade enorme para qualquer um.</h2>
         </div>
         </div>
     
         <div class="firstNavigation">
             <nav>
                 <ul>
-                <li><a href="/index.html"><h1>LYNX</h1><h2>CAFE</h2></a></li>
-                <li><a href="/Our Coffees.html"><h3>Our Coffees</h3></a></li>
-                <li><a href="/Our Menus.html"><h3>Our Menu</h3></a></li>
+                    <li><a href="/index.html"><h1>COFFEE</br></h1><h2>Lab</h2></a></li>
+                    <li><a href="/Our Coffees.html"><h3>Nossos Cafés</h3></a></li>
+                    <li><a href="/Our Menus.html"><h3>Nossos Menus</h3></a></li>
                 </ul>
             </nav>
             </div>
