Video all Browsers

--- a/Our Coffees.html
+++ b/Our Coffees.html
@@ -59,7 +59,11 @@
         <section>
            <div class="twoRows">
                <div class="firstRow">
-               <video src="Videos/Our-coffee.mp4" width="100%" autoplay loop></video>
+               <video cposter="img/poster.jpg" width="100%" autoplay loop>
+                <source src="Videos/Our-coffee.mp4" type="video/mp4">
+                <source src="Videos/Our-coffee.mp4" type="video/webm">
+                <source src="Videos/Our-coffee.mp4" type="video/ogg">
+                </video>
                 </div>
                 <div class="secondRow">
                <h2>Livre de lacticíneos</h2>
