--- a/Our Coffees.html
+++ b/Our Coffees.html
@@ -14,7 +14,7 @@
         <div id="mobileNavigation">            
             <nav>
                 <ul>
-                    <li><a href="/index.html"><h2>Coffee Lab</h2></a></li>
+                    <li><a href="/index.html"><h2>Borsoi Cafe</h2></a></li>
                     <li><a href="/Our Coffees.html"><h2>Nossos Cafés</h2></a></li>
                     <li><a href="/Our Menus.html"><h2>Nosso Menu</h2></a></li>
                 </ul>
@@ -36,7 +36,7 @@
     <div class="firstNavigation">
         <nav>
             <ul>
-                <li><a href="/index.html"><h1>COFFEE</br></h1><h2>Lab</h2></a></li>
+                <li><a href="/index.html"><h1>BORSOI</br></h1><h2>CAFÉ</h2></a></li>
                 <li><a href="/Our Coffees.html"><h3>Nossos Cafés</h3></a></li>
                 <li><a href="/Our Menus.html"><h3>Nossos Menus</h3></a></li>
             </ul>
@@ -49,7 +49,7 @@
         <nav>
             <ul>
                 <li><a href="/Our Coffees.html"><h3>Nossos Cafés</h3></a></li>
-                <li><a href="/Our Coffees/Lynx Express.html"><h3>Lab Express</h3></a></li>
+                <li><a href="/Our Coffees/Lynx Express.html"><h3>Borsoi Express</h3></a></li>
                 <li><a href="/Our Coffees/Coffee in a can.html"><h3>Café na lata</h3></a></li>
                 <li><a href="/Our Coffees/Lynx at home.html"><h3>Café em casa</h3></a></li>
         </ul>
@@ -68,7 +68,7 @@
                 <div class="secondRow">
                <h2>Livre de lacticíneos</h2>
                <p>
-                Nossos deliciosos produtos à base de planta - Soja, Amêndoa, Côco e Aveia - virão sem custos extras quando você apresenta nosso cartão Lab. 
+                Nossos deliciosos produtos à base de planta - Soja, Amêndoa, Côco e Aveia - virão sem custos extras quando você apresenta nosso cartão Borsoi. 
                </p>
                 </div>
            </div>
