--- a/Our Coffees/Lynx Express.html
+++ b/Our Coffees/Lynx Express.html
@@ -36,7 +36,7 @@
             <div class="firstNavigation">
             <nav>
                 <ul>
-                    <li><a href="/index.html"><h1>COFFEE</br></h1><h2>Lab</h2></a></li>
+                    <li><a href="/index.html"><h1>BORSOI</br></h1><h2>CAFÉ</h2></a></li>
                     <li><a href="/Our Coffees.html"><h3>Nossos Cafés</h3></a></li>
                     <li><a href="/Our Menus.html"><h3>Nossos Menus</h3></a></li>
                 </ul>
@@ -50,7 +50,7 @@
             <nav>
                 <ul>
                 <li><a href="/Our Coffees.html"><h3>Nossos Cafés</h3></a></li>
-                <li><a href="/Our Coffees/Lynx Express.html"><h3>Lab Express</h3></a></li>
+                <li><a href="/Our Coffees/Lynx Express.html"><h3>Borsoi Express</h3></a></li>
                 <li><a href="/Our Coffees/Coffee in a can.html"><h3>Café na lata</h3></a></li>
                 <li><a href="/Our Coffees/Lynx at home.html"><h3>Café em casa</h3></a></li>
                 </ul>
