--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="styleSheet" href="/Style/index.css"/>
     
-    <title>Lynx Cafe</title>
+    <title>Borsoi Café</title>
 </head>
 <body>
     <header>
