--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
          <section>
              <div class="oneRow">
-            <h2>Coffee Lab está com você</h2>
+            <h2>Borsoi Café está com você</h2>
             <p>Para os amantes do café, nós estamos comprometidos a ajudar nossos clientes, comunidades e pessoas. Seguindo as medidas do governo, nós fizemos mudanças em como servimos nosso café, introduzindo distanciamento social e aprimorando a higiene de nossos procedimentos para manter nosso time e consumidores seguros.</p>
             </div> 
         </section>
