--- a/Our Coffees/Lynx Express.html
+++ b/Our Coffees/Lynx Express.html
@@ -15,7 +15,7 @@
             <div id="mobileNavigation">            
                 <nav>
                     <ul>
-                        <li><a href="/index.html"><h2>Coffee Lab</h2></a></li>
+                        <li><a href="/index.html"><h2>Borsoi Café</h2></a></li>
                         <li><a href="/Our Coffees.html"><h2>Nossos Cafés</h2></a></li>
                         <li><a href="/Our Menus.html"><h2>Nosso Menu</h2></a></li>
                     </ul>
