--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div id="mobileNavigation">            
                     <nav>
                         <ul>
-                            <li><a href="/index.html"><h2>Coffee Lab</h2></a></li>
+                            <li><a href="/index.html"><h2>Borsoi Café</h2></a></li>
                             <li><a href="/Our Coffees.html"><h2>Nossos Cafés</h2></a></li>
                             <li><a href="/Our Menus.html"><h2>Nosso Menu</h2></a></li>
                         </ul>
@@ -37,7 +37,7 @@
             <div class="firstNavigation">
             <nav>
                 <ul>
-                    <li><a href="/index.html"><h1>COFFEE</br></h1><h2>Lab</h2></a></li>
+                    <li><a href="/index.html"><h1>BORSOI</br></h1><h2>CAFÉ</h2></a></li>
                     <li><a href="/Our Coffees.html"><h3>Nossos Cafés</h3></a></li>
                     <li><a href="/Our Menus.html"><h3>Nossos Menus</h3></a></li>
                 </ul>
