--- a/Our Coffees/Lynx at home.html
+++ b/Our Coffees/Lynx at home.html
@@ -28,8 +28,8 @@
         <img class="headerImage" src="/Images/flatwhite3.png" />
 
         <div class="headerText">
-        <h1>At home</h1>
-        <h2>Barista-quality coffee, handcrafted by you at home.</h2>
+        <h1>Em cas</h1>
+        <h2>Qualidade de barista, feito na sua casa!</h2>
         </div>
         </div>
          <div class="firstNavigation">
