Start of Menu: Food & Drink dropdown

--- a/Our Coffees/Coffee in a can.html
+++ b/Our Coffees/Coffee in a can.html
@@ -29,8 +29,8 @@
         <img class="headerImage" src="/Images/flatwhite3.png"/>
     
         <div class="headerText">
-        <h1>Coffee in a can</h1>
-        <h2>Discover our chilled range of delicious ready-to-drink coffees in a can.</h2>
+        <h1>Café na lata</h1>
+        <h2>Descubra a nossa variedade deliciosas de cafés na lata.</h2>
         </div>
         </div>
     
