--- a/Our Coffees/Lynx at home.html
+++ b/Our Coffees/Lynx at home.html
@@ -28,7 +28,7 @@
         <img class="headerImage" src="/Images/flatwhite3.png" />
 
         <div class="headerText">
-        <h1>Em cas</h1>
+        <h1>Em casa</h1>
         <h2>Qualidade de barista, feito na sua casa!</h2>
         </div>
         </div>
