--- a/Our Menus.html
+++ b/Our Menus.html
@@ -54,23 +54,39 @@
             <div class="oneRow">
                 <div class="iconsWrapper">
                     <div class="iconContainer">
-                    <button><img class="icon" src="/Images/mug-icon.png"/></button>
+                    <button id="bebida"><img class="icon" src="/Images/mug-icon.png"/></button>
                     <p>Coffee</p>
                     </div>
                     </iconContainer>
                     <div class="iconContainer">
-                    <button><img class="icon" src="/Images/cake-icon.png"></button>
+                    <button id="comida"><img class="icon" src="/Images/cake-icon.png"></button>
                     <p>Food</p>
                     </div>
-                </div>
+                   
 
+            </div>
+            <p>Showing</p>
 
+            <select id="myDropdownDrink">
+                <option value="todos">Todas as bebidas</option>
+                <option value="especiais">Especialíssimos</option>
+                <option value="chocolateQuente">Chocolate Quente</option>
+                <option value="shakes">Shakes</option>
 
+            </select>
+            <select id="myDropdownFood">
+                <option value="todos">Todos as comidas</option>
+                <option value="especiais">Beirute</option>
+                <option value="chocolateQuente">Refeição</option>
+                <option value="shakes">Delícia</option>
+
+            </select>
 
             </div> 
         </section>
     </div>
     <script src="/myApp.js"></script>
+    <script src="/menu.js"></script>
 </body>
 </html>
 
