--- a/Our Menus.html
+++ b/Our Menus.html
@@ -53,13 +53,15 @@
             <div class="menuRow">
                 <div class="iconsWrapper">
                     <div class="iconContainer">
-                    <button id="bebida"><img class="icon" src="/Images/mug-icon.png"/></button>
+                    <button id="bebida"><img class="icon" src="/Images/mug-icon.png"/>
                     <p>Coffee</p>
+                    </button>
                     </div>
                     </iconContainer>
                     <div class="iconContainer">
-                    <button id="comida"><img class="icon" src="/Images/cake-icon.png"></button>
+                    <button id="comida"><img class="icon" src="/Images/cake-icon.png">
                     <p>Food</p>
+                    </button>
                     </div>  
                 </div>
             <h2>Selecione</h2>
