Underline First and Second Menu

--- a/Our Menus.html
+++ b/Our Menus.html
@@ -39,7 +39,7 @@
                 <ul>
                 <li><a href="/index.html"><h1>BORSOI</br></h1><h2>CAFÉ</h2></a></li>
                 <li><a href="/Our Coffees.html"><h3>Nossos Cafés</h3></a></li>
-                <li><a href="/Our Menus.html"><h3>Nossos Menus</h3></a></li>
+                <li><a href="/Our Menus.html"><h3><u>Nossos Menus</u></h3></a></li>
                 </ul>
             </nav>
             </div>
