--- a/Our Coffees.html
+++ b/Our Coffees.html
@@ -36,9 +36,9 @@
     <div class="firstNavigation">
         <nav>
             <ul>
-                <li><a href="/index.html"><h1>BORSOI</br></h1><h2>CAFÉ</h2></a></li>
-                <li><a href="/Our Coffees.html"><h3>Nossos Cafés</h3></a></li>
-                <li><a href="/Our Menus.html"><h3>Nossos Menus</h3></a></li>
+                <li><a id="index" href="/index.html"><h1>BORSOI</br></h1><h2>CAFÉ</h2></a></li>
+                <li><a id="ourCoffees" href="/Our Coffees.html"><h3><u>Nossos Cafés</u></h3></a></li>
+                <li><a id="ourMenus" href="/Our Menus.html"><h3>Nossos Menus</h3></a></li>
             </ul>
             </nav>
         </div>
@@ -48,7 +48,7 @@
         <div class="secondNavigation">
         <nav>
             <ul>
-                <li><a href="/Our Coffees.html"><h3>Nossos Cafés</h3></a></li>
+                <li><a href="/Our Coffees.html"><h3><u>Nossos Cafés</u></h3></a></li>
                 <li><a href="/Our Coffees/Lynx Express.html"><h3>Borsoi Express</h3></a></li>
                 <li><a href="/Our Coffees/Coffee in a can.html"><h3>Café na lata</h3></a></li>
                 <li><a href="/Our Coffees/Lynx at home.html"><h3>Café em casa</h3></a></li>
