--- a/Our Coffees/Lynx at home.html
+++ b/Our Coffees/Lynx at home.html
@@ -36,7 +36,7 @@
             <nav>
                 <ul>
                     <li><a href="/index.html"><h1>BORSOI</br></h1><h2>CAFÉ</h2></a></li>
-                    <li><a href="/Our Coffees.html"><h3>Nossos Cafés</h3></a></li>
+                    <li><a href="/Our Coffees.html"><h3><u>Nossos Cafés</u></h3></a></li>
                     <li><a href="/Our Menus.html"><h3>Nossos Menus</h3></a></li>
                 </ul>
             </nav>
@@ -50,7 +50,7 @@
                 <li><a href="/Our Coffees.html"><h3>Nossos Cafés</h3></a></li>
                 <li><a href="/Our Coffees/Lynx Express.html"><h3>Borsoi Express</h3></a></li>
                 <li><a href="/Our Coffees/Coffee in a can.html"><h3>Café na lata</h3></a></li>
-                <li><a href="/Our Coffees/Lynx at home.html"><h3>Café em casa</h3></a></li>
+                <li><a href="/Our Coffees/Lynx at home.html"><h3><u>Café em casa</u></h3></a></li>
             </ul>
         </nav>
     </div>
