--- a/Our Menus.html
+++ b/Our Menus.html
@@ -103,16 +103,18 @@
             <h1>Chocolate Quente</h1>
             <div class="productWrapper">
             <div class="productContainer">
-            <img class="menuImg" src="./Images/Menu/chocolate-quente.jpg"/>
+            <img class="menuImg" src="./Images/Menu/chocolate-quente.jpg"/>            
+            <h2>Chocolate Quente</h2>
             </div>
             </div>
             </div>
 
             <div id="milkShake">
-            <h1>Milk Shake</h1>
+            <h1>Milkshake</h1>
             <div class="productWrapper">
             <div class="productContainer">
             <img class="menuImg" src="./Images/Menu/milkshake.jpg"/>
+            <h2>Milkshake</h2>
             </div>
             </div>
             </div>
@@ -121,22 +123,32 @@
             <div id="foods">
 
                 <div id="sanduíche">
-                    <h1>Toasts</h1>
+                    <h1>Sanduíches</h1>
                     <div class="productWrapper">
                     <div class="productContainer">
                     <img class="menuImg" src="./Images/Menu/toasts.jpeg"/>
+                    <h2>Toasts</h2>
                     </div>
                     </div>
-                    </div>
+                </div>
 
                     <div id="caféDaManhã">
-                        <h1>Croissant recheado com Queijo Godar</h1>
+                        <h1>Café da Manhã</h1>
                         <div class="productWrapper">
                         <div class="productContainer">
                         <img class="menuImg" src="./Images/Menu/croissant.jpeg"/>
+                        <h2>Croissant recheado com Queijo Godar</h2>
                         </div>
                         </div>
+                        <div class="productWrapper">
+                        <div class="productContainer">
+                        <img class="menuImg" src="./Images/Menu/ovo-mexido.jpeg"/>
+                        <h2>Ovos mexidos ou gema mole</h2>
                         </div>
+                        </div>
+                    </div>
+
+
 
 
             </div> 
