--- a/Our Menus.html
+++ b/Our Menus.html
@@ -66,6 +66,7 @@
                 </div>
             <h2>Selecione</h2>
 
+            <label class="dropdown">
             <select id="myDropdownDrink" onchange="getSelectValueDrink();">
                 <option value="todasAsBebidas">Todas as bebidas</option>
                 <option value="cafés">Cafés</option>
@@ -78,6 +79,7 @@
                 <option value="refeição">Refeição</option>
                 <option value="caféDaManhã">Café da manhã</option>
             </select>
+            </label>
 
         <div id="drinks">
 
