--- a/Our Coffees/Lynx at home.html
+++ b/Our Coffees/Lynx at home.html
@@ -70,6 +70,17 @@
        </section>
    </div>
 
+   <section>
+    <footer>
+        <div class="footerRow">
+        <h2>Privacy police</h2>
+        <h2>Cookie policy</h2>
+        <h2>Terms and conditions</h2>
+        </br></br>
+        <h2>©Todos os direitos reservados</h2>
+        </div>
+    </footer>
+    </section>
    <script src="/myApp.js"></script>
 </body>
 </html>
