--- a/Our Coffees/Coffee in a can.html
+++ b/Our Coffees/Coffee in a can.html
@@ -65,8 +65,21 @@
            <p>Procurando por um pouco de energia durante a tarde? Teste nossos cafés na lata. Vá direto na geladeira quando estiver procurando por uma verdadeira explosão de energia!</p>
             <br/><br/>
             <p>Ainda melhor, eles são feitos com 30% menos açucar do que a maioria dos cafés em lata* isso para que você sinta o inteiro sabor de nosso café. Sem frescura, café de verdade na late - tudo que você tem que fazer é relaxar, abrir e aproveitar.</p>                 
-       </section>
-   </div>
+       </section>    
+    </div>
+<section>
+    <footer>
+        <div class="footerRow">
+        <h2>Privacy police</h2>
+        <h2>Cookie policy</h2>
+        <h2>Terms and conditions</h2>
+        </br></br>
+        <h2>©Todos os direitos reservados</h2>
+        </div>
+    </footer>
+</section>
+ 
+   
    <script src="/myApp.js"></script>
 </body>
 </html>
