--- a/Our Menus.html
+++ b/Our Menus.html
@@ -149,16 +149,21 @@
                         </div>
                         </div>
                     </div>
-
-
-
-
             </div> 
-
-      
-       
         </section>
     </div>
+    <section>
+        <footer>
+            <div class="footerRow">
+            <h2>Privacy police</h2>
+            <h2>Cookie policy</h2>
+            <h2>Terms and conditions</h2>
+            </br></br>
+            <h2>©Todos os direitos reservados</h2>
+            </div>
+        </footer>
+    </section>
+ 
     <script src="/myApp.js"></script>
     <script src="/menu.js"></script>
 </body>
